// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component recieves activeIndex 1`] = `
<div
  className="sc-bdVaJa ieAfbz"
>
  <div
    active={false}
    onMouseEnter={[Function]}
    setActive={[Function]}
  >
    TEST
  </div>
</div>
`;

exports[`Menu component recieves className 1`] = `
<div
  className="sc-bdVaJa ieAfbz TEST_CLASS"
>
  <div
    active={false}
    onMouseEnter={[Function]}
    setActive={[Function]}
  >
    TEST
  </div>
</div>
`;

exports[`Menu component renders children 1`] = `
<div
  className="sc-bdVaJa ieAfbz"
>
  <div
    active={false}
    onMouseEnter={[Function]}
    setActive={[Function]}
  >
    TEST
  </div>
</div>
`;
